fix hero-card overflow

--- a/src/assets/css/layouts/sections/_hero.scss
+++ b/src/assets/css/layouts/sections/_hero.scss
@@ -68,7 +68,7 @@
       padding-top: 240px;
     }
     @include grid-mn('xxl') {
-      overflow: visible;
+
     }
     @include grid-mx('md') {
       padding: 21px 0px 0;
